--- a/devbarbershop/phpunit.xml.dist
+++ b/devbarbershop/phpunit.xml.dist
@@ -59,5 +59,11 @@
             <env name="database.tests.DBDriver" value="MySQLi"/>
             <env name="database.tests.DBPrefix" value="tests_"/>
             -->
+            <env name="database.default.hostname" value="127.0.0.1"/>
+            <env name="database.default.database" value="devbarbershop"/>
+            <env name="database.default.username" value="postgres"/>
+            <env name="database.default.password" value="postgres"/>
+            <env name="database.default.DBDriver" value="Postgre"/>
+            <env name="database.default.DBPrefix" value=""/>
     </php>
 </phpunit>
